RESOLVED FIXED134361
Memory cache might not be pruned when it should for https pages
https://bugs.webkit.org/show_bug.cgi?id=134361
Summary Memory cache might not be pruned when it should for https pages
Balazs Kelemen
Reported 2014-06-26 13:50:57 PDT
There is an inconsistency in CachedResource::removeClient
Attachments
Patch (2.19 KB, patch)
2014-06-26 14:06 PDT, Balazs Kelemen
no flags
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 (550.53 KB, application/zip)
2014-06-26 14:40 PDT, Build Bot
no flags
Balazs Kelemen
Comment 1 2014-06-26 14:06:57 PDT
Geoffrey Garen
Comment 2 2014-06-26 14:14:49 PDT
Comment on attachment 233932 [details] Patch r=me
Build Bot
Comment 3 2014-06-26 14:40:51 PDT
Comment on attachment 233932 [details] Patch Attachment 233932 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/5637062174703616 New failing tests: media/W3C/video/networkState/networkState_during_loadstart.html
Build Bot
Comment 4 2014-06-26 14:40:56 PDT
Created attachment 233935 [details] Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-15 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Balazs Kelemen
Comment 5 2014-06-26 15:38:27 PDT
Comment on attachment 233932 [details] Patch I'm not sure it's me, let's try it again on the cq.
WebKit Commit Bot
Comment 6 2014-06-26 16:18:19 PDT
Comment on attachment 233932 [details] Patch Clearing flags on attachment: 233932 Committed r170504: <http://trac.webkit.org/changeset/170504>
WebKit Commit Bot
Comment 7 2014-06-26 16:18:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.