Memcache migth not be pruned when it should for https pages https://bugs.webkit.org/show_bug.cgi?id=134361

Reviewed by Geoffrey Garen.

There is no reason we should not try to prune in case of a https resource.

No observable change in behavior, no tests.

* loader/cache/CachedResource.cpp:
(WebCore::CachedResource::removeClient):
Call prune unconditionally and remove an unnecessary branch.


Canonical link: https://commits.webkit.org/152347@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170504 268f45cc-cd09-0410-ab3c-d52691b4dbfc